--- a/assets/style.css
+++ b/assets/style.css
@@ -1,33 +1,46 @@
-html {
-  background: url("bg.png") repeat;
-}
-
 body {
-  font: 13px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px Vollkorn, serif;
   line-height: 1.4;
   color: #666;
   min-width: 960px;
 }
 
 h1 {
-  font-weight: bold;
+  font-family: Ubuntu, sans-serif;
   font-size: 20px;
   color: #333;
 }
 
 h2 {
-  font-weight: bold;
+  font-family: Ubuntu, sans-serif;
   font-size: 20px;
   color: #0084b4;
 }
 
-a:link, a:visited {
-  color: #0084b4;
+a:link {
   text-decoration: none;
 }
 
 a:hover {
   text-decoration: underline;
+}
+
+nav {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: auto;
+}
+
+nav ul li a {
+  font-family: Ubuntu, sans-serif;
+  font-size: 18px;
+  color: black;
+}
+
+.breadcrumb .divider {
+  padding: 0 2px;
+  font-size: 18px;
 }
 
 #wrapper {
@@ -52,7 +65,7 @@ a:hover {
 }
 
 #main h1 {
-  margin: 30px 0;
+  margin: 10px 0;
 }
 
 #main h1, #main p {
@@ -61,13 +74,13 @@ a:hover {
 }
 
 #main p {
-  font-size: 11px;
-  line-height: 2;
+  font-size: 12px;
+  line-height: 1.5;
 }
 
 #logo {
   width: 190px;
-  height: 64px;
+  height: 240px;
   margin: 15px 0 0 15px;
   background: url("logo.png");
   text-indent: -99999px;
@@ -204,49 +217,4 @@ li.repo h3 {
 
 .repo.python:after {
   border-right-color: #6aad2d;
-}
-
-@keyframes small-swing { 0% { margin-top: 0px } 50% { margin-top: -10px } 100% { margin-top: 0px } }
-@-moz-keyframes small-swing { 0% { margin-top: 0px } 50% { margin-top: -10px } 100% { margin-top: 0px } }
-@-webkit-keyframes small-swing { 0% { margin-top: 0px } 50% { margin-top: -10px } 100% { margin-top: 0px } }
-@-ms-keyframes small-swing { 0% { margin-top: 0px } 50% { margin-top: -10px } 100% { margin-top: 0px } }
-
-@keyframes medium-swing { 0% { margin-top: 0px } 50% { margin-top: -20px } 100% { margin-top: 0px } }
-@-moz-keyframes medium-swing { 0% { margin-top: 0px } 50% { margin-top: -20px } 100% { margin-top: 0px } }
-@-webkit-keyframes medium-swing { 0% { margin-top: 0px } 50% { margin-top: -20px } 100% { margin-top: 0px } }
-@-ms-keyframes medium-swing { 0% { margin-top: 0px } 50% { margin-top: -20px } 100% { margin-top: 0px } }
-
-@keyframes large-swing { 0% { margin-top: 0px } 50% { margin-top: -40px } 100% { margin-top: 0px } }
-@-moz-keyframes large-swing { 0% { margin-top: 0px } 50% { margin-top: -40px } 100% { margin-top: 0px } }
-@-webkit-keyframes large-swing { 0% { margin-top: 0px } 50% { margin-top: -40px } 100% { margin-top: 0px } }
-@-ms-keyframes large-swing { 0% { margin-top: 0px } 50% { margin-top: -40px } 100% { margin-top: 0px } }
-
-.larry.size-smaller, .larry.size-small {
-  animation: small-swing 0.5s infinite ease-in-out;
-  -moz-animation: small-swing 0.5s infinite ease-in-out;
-  -webkit-animation: small-swing 0.5s infinite ease-in-out;
-  -ms-animation: small-swing 0.5s infinite ease-in-out;
-}
-
-.larry.size-medium, .larry.size-large {
-  animation: medium-swing 1.25s infinite ease-in-out;
-  -moz-animation: medium-swing 1.25s infinite ease-in-out;
-  -webkit-animation: medium-swing 1.25s infinite ease-in-out;
-  -ms-animation: medium-swing 1.25s infinite ease-in-out;
-}
-
-.larry.size-medium, .larry.size-fat {
-  animation: large-swing 1.5s infinite ease-in-out;
-  -moz-animation: large-swing 1.5s infinite ease-in-out;
-  -webkit-animation: large-swing 1.5s infinite ease-in-out;
-  -ms-animation: large-swing 1.5s infinite ease-in-out;
-}
-
-#flyzone {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
 }
